demo09/pod-worker02.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    env: test
spec:
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
  tolerations:
  - key: "demo09"
    operator: "Equal"
    value: "test"
    effect: "NoSchedule"
  nodeSelector:
    kubernetes.io/hostname: k8sworker02
