demo09/web-proj.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-proj
  name: web-proj
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-proj
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web-proj
    spec:
      containers:
      - image: nginx:1.18
        imagePullPolicy: IfNotPresent
        name: nginx
