demo09/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: webapp-dev
spec:
  podSelector:
    matchLabels:
      app: webapp-dev
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: wordpress-dev
    ports:
    - protocol: TCP
      port: 80
